mission and vision page added

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                     <a href="profile.html">Our Profile</a>
                                     <a href="goal.html">Our Goal</a>
                                     <a href="how-we-work.html">How We Work</a>
-                                    <a href="#">Mission & Vision</a>
+                                    <a href="mission-vision.html">Mission & Vision</a>
                                     <a href="#">Zero Tolerance Policy</a>
                                 </div>
                             </div>
@@ -136,7 +136,7 @@
                                     <a href="profile.html">Our Profile</a>
                                     <a href="goal.html">Our Goal</a>
                                     <a href="how-we-work.html">How We Work</a>
-                                    <a href="#">Mission & Vision</a>
+                                    <a href="mission-vision.html">Mission & Vision</a>
                                     <a href="#">Zero Tolerance Policy</a>
                                 </div>
                             </div>
