--- a/mission-vision.html
+++ b/mission-vision.html
@@ -74,7 +74,7 @@
                                     <a href="profile.html">Our Profile</a>
                                     <a href="goal.html">Our Goal</a>
                                     <a href="how-we-work.html">How We Work</a>
-                                    <a href="#">Mission & Vision</a>
+                                    <a href="mission-vision.html">Mission & Vision</a>
                                     <a href="#">Zero Tolerance Policy</a>
                                 </div>
                             </div>
@@ -139,7 +139,7 @@
                                     <a href="profile.html">Our Profile</a>
                                     <a href="goal.html">Our Goal</a>
                                     <a href="how-we-work.html">How We Work</a>
-                                    <a href="#">Mission & Vision</a>
+                                    <a href="mission-vision.html">Mission & Vision</a>
                                     <a href="#">Zero Tolerance Policy</a>
                                 </div>
                             </div>
@@ -205,43 +205,27 @@
     <!-- header end here -->
 
 
-    <!-- goal start here -->
-
+    <!-- profile start here -->
     <div class="bg-white py-8">
         <div class="max-w-7xl mx-auto px-4">
-            <h1 class="text-3xl font-bold text-center mb-8">OUR GOALS</h1>
+            <h1 class="text-3xl font-bold text-center mb-8">MISSION & VISIONS</h1>
             <div class="flex flex-wrap md:flex-nowrap">
                 <div class="md:flex-1">
-                    <img src="image/goals.webp"
+                    <img src="image/mision-vision.jpg"
                         alt="Two professionals discussing work at a table with documents and a laptop" class="mb-4">
                 </div>
                 <div class="md:flex-1 md:pl-8">
-                    <h3 class="text-gray-700 mb-4 font-bold">Our Customer </h3>
-                    <p class="text-gray-700 mb-4"> We put our customers at the forefront recognizing & respecting their
-                        values , with a view to always meet their requirements and making their sourcing, a valuable
-                        one.</p>
-                    <h3 class="text-gray-700 mb-4 font-bold">Workforce</h3>
-                    <p class="text-gray-700 mb-4">We commit ourselves to make sure that our people grow within the
-                        business.
-                        We believe in their reliability, team spirit and legitimate aspirations for always being
-                        successful.</p>
-                    <h3 class="text-gray-700 mb-4 font-bold">Leadership</h3>
-                    <p class="text-gray-700 mb-4">We demonstrate decisive leadership and fast management reaction to
-                        secure maximum advantages of changes</p>
+                    <p class="text-gray-700 mb-4">
+                        The ambition of <span class="font-bold">Well Done Sourcing</span> is to build up as one of the prime RMG exporters of the globe We are the country’s supreme business entity and producing knit wears is our main business strength. Our mission is to contribute to the greater interest of the people broadly speaking to serve the nation. To satisfy our stated business goal we ensure Laws and Workplace regulations. It is our motto to prioritize the academic qualification and technical expertise to bring the organizational success irrespective of cast, creed color & race. Our corporate vision is to create an outstanding value for customers and other stakeholders. We are committed to develop a great new product and service to create a great company as we strive for excellenc</p>
+                    <p class="text-gray-700 mb-4">In the process we are trying to implement all the suggested Code of Conducts, practices or ethics of internationally reputed and professionally certified organization with a view to having corporate governance. Having continuing professional development, high tech equipment's, high profile industrial trainin</p>
+                    
                 </div>
             </div>
-            <h3 class="text-gray-700 mb-4 font-bold">Accountability</h3>
-            <p class="text-gray-700 mt-4">We recognize and always honor the investment of our customers, as well as our
-                ethical and social responsibilities. We respect our environment and its protection is part of our prime
-                duties.</p>
-            <h3 class="text-gray-700 mb-4 font-bold">Excellence
-            </h3>
-            <p class="text-gray-700 mt-4">We compete on quality, service and value. We build our competitive edge on
-                superior innovation and customer responsiveness.
-                We have a passion for excellence and our intention is to simply be the best.</p>
+            <p class="text-gray-700 mt-4">& skill development, uncompromising quality assurance, and sustainable consistency of determined policies. By fulfilling all the required benchmarks we have been able cope with buyer’s requirements along with achieving prestigious international certificates i.e. our 100% export oriented buying & garment division has achieved the distinction of having set pace and standard with excellence in the RMG sector in Bangladesh. We are the pioneers of the sophisticated machineries and later on considered as a benchmark in the relevant field. Our company with getting assistance of all it’s sister concerns is capable of producing each and every kind of Sweater, Knit, Woven, Headwear, & Bottom garments. We are mindful of our responsibility to return the value we create the business through our local community at large. Over many years we have launched various projects in order to support social, economical and environmental sustainability. We adopt a holistic approach for sustainable long term growth for the benefit of people in the areas of our operational & technical along with professional activities at home and abr</p>
+           
         </div>
     </div>
-    <!-- gaol end here -->
+    <!-- profile end here -->
 
 
 
