--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
                                     <a href="profile.html">Our Profile</a>
                                     <a href="goal.html">Our Goal</a>
                                     <a href="how-we-work.html">How We Work</a>
-                                    <a href="#">Mission & Vision</a>
+                                    <a href="mission-vision.html">Mission & Vision</a>
                                     <a href="#">Zero Tolerance Policy</a>
                                 </div>
                             </div>
@@ -139,7 +139,7 @@
                                     <a href="profile.html">Our Profile</a>
                                     <a href="goal.html">Our Goal</a>
                                     <a href="how-we-work.html">How We Work</a>
-                                    <a href="#">Mission & Vision</a>
+                                    <a href="mission-vision.html">Mission & Vision</a>
                                     <a href="#">Zero Tolerance Policy</a>
                                 </div>
                             </div>
