--- a/mission-vision.html
+++ b/mission-vision.html
@@ -75,7 +75,7 @@
                                     <a href="goal.html">Our Goal</a>
                                     <a href="how-we-work.html">How We Work</a>
                                     <a href="mission-vision.html">Mission & Vision</a>
-                                    <a href="#">Zero Tolerance Policy</a>
+                                    <a href="zero.html">Zero Tolerance Policy</a>
                                 </div>
                             </div>
                             <div class="dropdown">
@@ -140,7 +140,7 @@
                                     <a href="goal.html">Our Goal</a>
                                     <a href="how-we-work.html">How We Work</a>
                                     <a href="mission-vision.html">Mission & Vision</a>
-                                    <a href="#">Zero Tolerance Policy</a>
+                                    <a href="zero.html">Zero Tolerance Policy</a>
                                 </div>
                             </div>
                             <div class="dropdown relative">
