--- a/zero.html
+++ b/zero.html
@@ -84,7 +84,7 @@
                                     <div class="dropdown">
                                         <a href="#">Knit</a>
                                         <div class="submenu">
-                                            <a href="#">Men</a>
+                                            <a href="knit-man.html">Men</a>
                                             <a href="#">Women</a>
                                             <a href="#">Kids</a>
                                         </div>
@@ -149,7 +149,7 @@
                                     <div class="dropdown relative">
                                         <a href="#">Knit</a>
                                         <div class="submenu absolute hidden">
-                                            <a href="#">Men</a>
+                                            <a href="knit-man.html">Men</a>
                                             <a href="#">Women</a>
                                             <a href="#">Kids</a>
                                         </div>
