knit women page added

--- a/faq.html
+++ b/faq.html
@@ -85,7 +85,7 @@
                                         <a href="#">Knit</a>
                                         <div class="submenu">
                                             <a href="knit-man.html">Men</a>
-                                            <a href="#">Women</a>
+                                            <a href="knit-women.html">Women</a>
                                             <a href="#">Kids</a>
                                         </div>
                                     </div>
@@ -149,7 +149,7 @@
                                         <a href="#">Knit</a>
                                         <div class="submenu absolute hidden">
                                             <a href="knit-man.html">Men</a>
-                                            <a href="#">Women</a>
+                                            <a href="knit-women.html">Women</a>
                                             <a href="#">Kids</a>
                                         </div>
                                     </div>
