--- a/mission-vision.html
+++ b/mission-vision.html
@@ -85,7 +85,7 @@
                                         <a href="#">Knit</a>
                                         <div class="submenu">
                                             <a href="news-events.html">Men</a>
-                                            <a href="#">Women</a>
+                                            <a href="knit-women.html">Women</a>
                                             <a href="#">Kids</a>
                                         </div>
                                     </div>
@@ -150,7 +150,7 @@
                                         <a href="#">Knit</a>
                                         <div class="submenu absolute hidden">
                                             <a href="knit-man.html">Men</a>
-                                            <a href="#">Women</a>
+                                            <a href="knit-women.html">Women</a>
                                             <a href="#">Kids</a>
                                         </div>
                                     </div>
