--- a/knit-women.html
+++ b/knit-women.html
@@ -205,49 +205,31 @@
     <!-- header end here -->
 
 
-    <!-- profie start here -->
+    <!-- knit man start here -->
 
-    <div class="bg-white py-8">
-        <div class="max-w-7xl mx-auto px-4">
-            <h1 class="text-3xl font-bold text-center mb-8">OUR PROFILE</h1>
-            <div class="flex flex-wrap md:flex-nowrap">
-                <div class="md:flex-1">
-                    <img src="image/profile.jpg"
-                        alt="Two professionals discussing work at a table with documents and a laptop" class="mb-4">
-                </div>
-                <div class="md:flex-1 md:pl-8">
-                    <p class="text-gray-700 mb-4"> <span class="font-bold">Well Done Sourcing</span>
-                        is a global trading company managing the source of supply and the delivery of textile products.
-                        The main focus of our business is to provide apparel sourcing services to our esteemed clients
-                        to allow them a most satisfying buying experience. We cater directly to apparel retailers
-                        importers worldwide are currently providing services to a wide range of big US, European
-                        retailers/importers.</p>
-                    <p class="text-gray-700 mb-4"><span class="font-bold">Well Done Sourcing</span>
-                        was established with a mission of providing
-                        exceptional and personalized services to our clients & to fulfill this mission we have head
-                        office in Dhaka, Bangladesh and other support offices in Hong Kong. Our core principle of
-                        business is to provide the right product at the right price & at the right time.</p>
-                    <p class="text-gray-700 mb-4"><span class="font-bold">Well Done Sourcing</span>
-                        is proud to acknowledge our staff as one of the
-                        driving forces of our company's success. It is comprised of highly-trained professionals and
-                        technicians who participate in continuing education to keep abreast of all major market trends
-                        and technological developments. Our staff is guided by principles of integrity and ethical
-                        business practices to ensure our customer's confidence.</p>
-                </div>
+   <div class="bg-gray-100">
+    <div class="container mx-auto py-10">
+        <h1 class="text-center text-3xl font-semibold mb-8">Knit Women All Products</h1>
+        <div class="flex justify-center gap-4">
+            <div class="w-1/4 p-4 bg-white shadow-lg">
+                <img src="image/All Products/women1.jpg" alt="Placeholder image of a grey t-shirt with a 'New Orleans Football' print" class="mb-4">
+                <h2 class="text-center text-lg">Womens 001</h2>
             </div>
-            <p class="text-gray-700 mt-4"><span class="font-bold">Well Done Sourcing</span>
-                is committed to develop close ties with our esteemed
-                customers through personalized services, cooperation, and assistance, which translate into the highest
-                standards in quality, delivery time, and value. Our hands-on and versatile management approach allows us
-                to monitor all the processes, from pre-assessments to shipping, in order to address and comply with all
-                of our customer's needs and expectations.</p>
-            <p class="text-gray-700 mt-4">Bangladesh, currently the hottest destination in world for sourcing of
-                apparels is our major strength as we have excellent control over factories who are working dedicatedly
-                for us. We work on a variety of garments ranging from Fashion to Basics in Sweater, Knit & Woven – Tops
-                / Bottoms. We are specialized in doing a variety of prints / embroideries / appliqués & washes on the
-                garments.</p>
+            <div class="w-1/4 p-4 bg-white shadow-lg">
+                <img src="image/All Products/women2.jpg" alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4">
+                <h2 class="text-center text-lg">Womens 002</h2>
+            </div>
+            <div class="w-1/4 p-4 bg-white shadow-lg">
+                <img src="image/All Products/women3.jpg" alt="Placeholder image of a grey long sleeve shirt" class="mb-4">
+                <h2 class="text-center text-lg">Womens 003</h2>
+            </div>
+            <div class="w-1/4 p-4 bg-white shadow-lg">
+                <img src="image/All Products/women4.jpg" alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4">
+                <h2 class="text-center text-lg">Womens 004</h2>
+            </div>
         </div>
     </div>
+   </div>
     <!-- profile end here -->
 
 
