added knit kids products

--- a/faq.html
+++ b/faq.html
@@ -86,7 +86,7 @@
                                         <div class="submenu">
                                             <a href="knit-man.html">Men</a>
                                             <a href="knit-women.html">Women</a>
-                                            <a href="#">Kids</a>
+                                            <a href="knit-kids.html">Kids</a>
                                         </div>
                                     </div>
                                     <div class="dropdown">
@@ -150,7 +150,7 @@
                                         <div class="submenu absolute hidden">
                                             <a href="knit-man.html">Men</a>
                                             <a href="knit-women.html">Women</a>
-                                            <a href="#">Kids</a>
+                                            <a href="knit-kids.html">Kids</a>
                                         </div>
                                     </div>
                                     <div class="dropdown relative">
