--- a/contact.html
+++ b/contact.html
@@ -84,9 +84,9 @@
                                     <div class="dropdown">
                                         <a href="#">Knit</a>
                                         <div class="submenu">
-                                            <a href="#">Men</a>
-                                            <a href="#">Women</a>
-                                            <a href="#">Kids</a>
+                                            <a href="knit-man.html">Men</a>
+                                            <a href="knit-women.html">Women</a>
+                                            <a href="knit-kids.html">Kids</a>
                                         </div>
                                     </div>
                                     <div class="dropdown">
@@ -149,9 +149,9 @@
                                     <div class="dropdown relative">
                                         <a href="#">Knit</a>
                                         <div class="submenu absolute hidden">
-                                            <a href="#">Men</a>
-                                            <a href="#">Women</a>
-                                            <a href="#">Kids</a>
+                                            <a href="knit-man.html">Men</a>
+                                            <a href="knit-women.html">Women</a>
+                                            <a href="knit-kids.html">Kids</a>
                                         </div>
                                     </div>
                                     <div class="dropdown relative">
