--- a/knit-kids.html
+++ b/knit-kids.html
@@ -205,34 +205,31 @@
     <!-- header end here -->
 
 
-    <!-- profie start here -->
+    <!-- knit man start here -->
 
-    <div class="bg-white py-8">
-        <div class="max-w-7xl mx-auto px-4">
-            <h1 class="text-3xl font-bold text-center mb-8">ABOUT US</h1>
-            <div class="flex flex-wrap md:flex-nowrap">
-                <div class="md:flex-1">
-                    <img src="image/about-us.jpg"
-                        alt="Two professionals discussing work at a table with documents and a laptop" class="mb-4">
-                </div>
-                <div class="md:flex-1 md:pl-8">
-                    <p class="text-gray-700 mb-4"> <span class="font-bold">Well Done Sourcing</span>
-                         was established with a mission of providing exceptional and personalized services to our clients & to fulfill this mission from different areas in Asia such as Bangladesh, China, India, Vietnam, Korea etc countries.. Our experienced professional team of expatriates minimizes the communication problems with customers often confront in resulting in efficient handling of business.  </p>
-                    <p class="text-gray-700 mb-4"><span class="font-bold">Well Done Sourcing</span>
-                       is proud to acknowledge our staff as one of the driving forces of our company’s success. It is comprised of highly-trained professionals and technicians who participate in continuing education to keep abreast of all major market trends and technological developments. Our staff is guided by principles of integrity and ethical business practices to ensure our customers’ confidence.</p>
-                    
-                </div>
+   <div class="bg-gray-100">
+    <div class="container mx-auto py-10">
+        <h1 class="text-center text-3xl font-semibold mb-8">knit Kids All Products</h1>
+        <div class="flex justify-center gap-4">
+            <div class="w-1/4 p-4 bg-white shadow-lg">
+                <img src="image/All Products/kids1.jpg" alt="Placeholder image of a grey t-shirt with a 'New Orleans Football' print" class="mb-4">
+                <h2 class="text-center text-lg">Kids 001</h2>
             </div>
-            <p class="text-gray-700 mt-4"><span class="font-bold">Well Done Sourcing</span>
-                 is committed to develop close ties with our esteemed customers through personalized services, cooperation, and assistance, which translate into the highest standards in quality, delivery time, and value. Our hands-on and versatile management approach allows us to monitor all the processes, from pre-assessments to shipping, in order to address and comply with all of our customers’ needs and expectations.</p>
-                 <p class="text-gray-700 mt-4">Currently the hottest destination in world for sourcing of Apparel, Textile, Footwear & socks products is our major strength as we have excellent control over factories who are working dedicatedly for us. We have our own Factories which located in Dhaka and Chittagong. We work on a variety of Apparel, Textile, Footwear & socks products ranging from Fashion to Basics We are specialized in doing a variety of prints / embroideries / appliqués & washes on that items.</p>
-            <p class="text-gray-700 mt-4"><span class="font-bold">Well Done Sourcing</span> was starting his work since February 2010. Due to the hard work and sincerity of elaborate our business into various part of section. We do not compromise with good quality and commitment. We believe that, we can keep our quality and service in future at each and every stage.</p>
-            <p class="text-gray-700 mt-4">Our conducted all factories have compliance with Accord, BSCI, ISO, SEDEX and also all essential international textile Certificate.
-
-            </p>
-            <p class="text-gray-700 mt-4">The company’s mission is to the customer's satisfaction by providing quality garments produced by adopting better environmental practices and complying with best services standard and with the compatible price. Buyer satisfaction is our first priority. Our young experienced team of staff giving their utmost labor and effort to assure the quality and take care about the satisfactions of end users. Commitment- honesty and reliable handling with customer has makes it best buying house in the country. So you will get your complete satisfaction when you work with us</p>
+            <div class="w-1/4 p-4 bg-white shadow-lg">
+                <img src="image/All Products/kids2.jpg" alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4">
+                <h2 class="text-center text-lg">Kids 002</h2>
+            </div>
+            <div class="w-1/4 p-4 bg-white shadow-lg">
+                <img src="image/All Products/kids3.jpg" alt="Placeholder image of a grey long sleeve shirt" class="mb-4">
+                <h2 class="text-center text-lg">Kids 003</h2>
+            </div>
+            <div class="w-1/4 p-4 bg-white shadow-lg">
+                <img src="image/All Products/kids4.jpg" alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4">
+                <h2 class="text-center text-lg">Kids 004</h2>
+            </div>
         </div>
     </div>
+   </div>
     <!-- profile end here -->
 
 
