--- a/faq.html
+++ b/faq.html
@@ -92,9 +92,9 @@
                                     <div class="dropdown">
                                         <a href="#">Woven</a>
                                         <div class="submenu">
-                                            <a href="#">Men</a>
-                                            <a href="#">Women</a>
-                                            <a href="#">Kids</a>
+                                            <a href="woven-men.html">Men</a>
+                                            <a href="woven-women.html">Women</a>
+                                            <a href="woven-kids.html">Kids</a>
                                         </div>
                                     </div>
                                     <div class="dropdown">
@@ -156,9 +156,9 @@
                                     <div class="dropdown relative">
                                         <a href="#">Woven</a>
                                         <div class="submenu absolute hidden">
-                                            <a href="#">Men</a>
-                                            <a href="#">Women</a>
-                                            <a href="#">Kids</a>
+                                            <a href="woven-men.html">Men</a>
+                                            <a href="woven-women.html">Women</a>
+                                            <a href="woven-kids.html">Kids</a>
                                         </div>
                                     </div>
                                     <div class="dropdown relative">
