--- a/news-events.html
+++ b/news-events.html
@@ -84,17 +84,17 @@
                                     <div class="dropdown">
                                         <a href="#">Knit</a>
                                         <div class="submenu">
-                                            <a href="#">Men</a>
-                                            <a href="#">Women</a>
-                                            <a href="#">Kids</a>
+                                            <a href="woven-men.html">Men</a>
+                                            <a href="knit-women.html">Women</a>
+                                            <a href="knit-kids.html">Kids</a>
                                         </div>
                                     </div>
                                     <div class="dropdown">
                                         <a href="#">Woven</a>
                                         <div class="submenu">
-                                            <a href="#">Men</a>
-                                            <a href="#">Women</a>
-                                            <a href="#">Kids</a>
+                                            <a href="woven-men.html">Men</a>
+                                            <a href="woven-women.html">Women</a>
+                                            <a href="woven-kids.html">Kids</a>
                                         </div>
                                     </div>
                                     <div class="dropdown">
@@ -148,17 +148,17 @@
                                     <div class="dropdown relative">
                                         <a href="#">Knit</a>
                                         <div class="submenu absolute hidden">
-                                            <a href="#">Men</a>
-                                            <a href="#">Women</a>
-                                            <a href="#">Kids</a>
+                                            <a href="knit-man.html">Men</a>
+                                            <a href="knit-women.html">Women</a>
+                                            <a href="knit-kids.html">Kids</a>
                                         </div>
                                     </div>
                                     <div class="dropdown relative">
                                         <a href="#">Woven</a>
                                         <div class="submenu absolute hidden">
-                                            <a href="#">Men</a>
-                                            <a href="#">Women</a>
-                                            <a href="#">Kids</a>
+                                            <a href="woven-men.html">Men</a>
+                                            <a href="woven-women.html">Women</a>
+                                            <a href="woven-kids.html">Kids</a>
                                         </div>
                                     </div>
                                     <div class="dropdown relative">
