--- a/woven-women.html
+++ b/woven-women.html
@@ -92,9 +92,9 @@
                                     <div class="dropdown">
                                         <a href="#">Woven</a>
                                         <div class="submenu">
-                                            <a href="woven-men.html">Men</a>
-                                            <a href="woven-women.html">Women</a>
-                                            <a href="woven-kids.html">Kids</a>
+                                            <a href="#">Men</a>
+                                            <a href="#">Women</a>
+                                            <a href="#">Kids</a>
                                         </div>
                                     </div>
                                     <div class="dropdown">
@@ -157,9 +157,9 @@
                                     <div class="dropdown relative">
                                         <a href="#">Woven</a>
                                         <div class="submenu absolute hidden">
-                                            <a href="woven-men.html">Men</a>
-                                            <a href="woven-women.html">Women</a>
-                                            <a href="woven-kids.html">Kids</a>
+                                            <a href="#">Men</a>
+                                            <a href="#">Women</a>
+                                            <a href="#">Kids</a>
                                         </div>
                                     </div>
                                     <div class="dropdown relative">
@@ -205,42 +205,32 @@
     <!-- header end here -->
 
 
-    <!-- zero tolarence start here -->
+    <!-- knit man start here -->
 
-    <div class="bg-white py-8">
-        <div class="max-w-7xl mx-auto px-4">
-            <h1 class="text-3xl font-bold text-center mb-8">ZERO TOLERANCE POLICY
-            </h1>
-            <div class="flex flex-wrap md:flex-nowrap">
-                <div class="md:flex-1">
-                    <img src="image/zero.jpg"
-                        alt="Two professionals discussing work at a table with documents and a laptop" class="mb-4">
-                </div>
-                <div class="md:flex-1 md:pl-8">
-                    <h3 class="text-gray-700 mb-4 font-bold">We follow below Zero tolerance policy</h3>
-                    
-                    <ol class="p-5">
-                        <li>1. Child labor </li>
-                        <br>
-                        <li>2. Forced labor</li>
-                        <br>
-                        <li>3. Discrimination </li>
-                        <br>
-                        <li>4. Harassment and Abuse</li>
-                        <br>
-                        <li>5.Unauthorized subcontracting including Tier 2 operations regardless of brands </li>
-                        <br>
-                        <li>6.Shared building unless approved by Head of Compliance (any other factory owned by different owner located in the same building) or factory located in building which has shops/markets </li>
-                        <br>
-                        <li>7. Factory building approved for residential purposes </li>
-                        <br>
-                        <li>8. Any unethical practice.  </li>
-                    </ol>
-                </div>
+   <div class="bg-gray-100">
+    <div class="container mx-auto py-10">
+        <h1 class="text-center text-3xl font-semibold mb-8">Woven Women All Products</h1>
+        <div class="flex justify-center gap-4">
+            <div class="w-1/4 p-4 bg-white shadow-lg">
+                <img src="image/All Products/woven/women1.jpg" alt="Placeholder image of a grey t-shirt with a 'New Orleans Football' print" class="mb-4">
+                <h2 class="text-center text-lg">Womens 001</h2>
             </div>
-            
+            <div class="w-1/4 p-4 bg-white shadow-lg">
+                <img src="image/All Products/woven/women2.jpg" alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4">
+                <h2 class="text-center text-lg">Womens 002</h2>
+            </div>
+            <div class="w-1/4 p-4 bg-white shadow-lg">
+                <img src="image/All Products/woven/women3.jpg" alt="Placeholder image of a grey long sleeve shirt" class="mb-4">
+                <h2 class="text-center text-lg">Womens 003</h2>
+            </div>
+            <div class="w-1/4 p-4 bg-white shadow-lg">
+                <img src="image/All Products/woven/women4.jpg" alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4">
+                <h2 class="text-center text-lg">Womens 004</h2>
+            </div>
+        </div>
     </div>
-    <!-- zero tolarence end here -->
+   </div>
+    <!-- profile end here -->
 
 
 
