added all sweater pages

--- a/knit-man.html
+++ b/knit-man.html
@@ -207,29 +207,33 @@
 
     <!-- knit man start here -->
 
-   <div class="bg-gray-100">
-    <div class="container mx-auto py-10">
-        <h1 class="text-center text-3xl font-semibold mb-8">Knit Men All Products</h1>
-        <div class="flex justify-center gap-4">
-            <div class="w-1/4 p-4 bg-white shadow-lg">
-                <img src="image/All Products/men1.jpg" alt="Placeholder image of a grey t-shirt with a 'New Orleans Football' print" class="mb-4">
-                <h2 class="text-center text-lg">Mens 001</h2>
-            </div>
-            <div class="w-1/4 p-4 bg-white shadow-lg">
-                <img src="image/All Products/men2.jpg" alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4">
-                <h2 class="text-center text-lg">Mens 002</h2>
-            </div>
-            <div class="w-1/4 p-4 bg-white shadow-lg">
-                <img src="image/All Products/men3 .jpg" alt="Placeholder image of a grey long sleeve shirt" class="mb-4">
-                <h2 class="text-center text-lg">Mens 003</h2>
-            </div>
-            <div class="w-1/4 p-4 bg-white shadow-lg">
-                <img src="image/All Products/men4.jpg" alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4">
-                <h2 class="text-center text-lg">Mens 004</h2>
+    <div class="bg-gray-100">
+        <div class="container mx-auto py-10">
+            <h1 class="text-center text-3xl font-semibold mb-8">Knit Men All Products</h1>
+            <div class="flex justify-center gap-4">
+                <div class="w-1/4 p-4 bg-white shadow-lg">
+                    <img src="image/All Products/men1.jpg"
+                        alt="Placeholder image of a grey t-shirt with a 'New Orleans Football' print" class="mb-4">
+                    <h2 class="text-center text-lg">Mens 001</h2>
+                </div>
+                <div class="w-1/4 p-4 bg-white shadow-lg">
+                    <img src="image/All Products/men2.jpg"
+                        alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4">
+                    <h2 class="text-center text-lg">Mens 002</h2>
+                </div>
+                <div class="w-1/4 p-4 bg-white shadow-lg">
+                    <img src="image/All Products/men3 .jpg" alt="Placeholder image of a grey long sleeve shirt"
+                        class="mb-4">
+                    <h2 class="text-center text-lg">Mens 003</h2>
+                </div>
+                <div class="w-1/4 p-4 bg-white shadow-lg">
+                    <img src="image/All Products/men4.jpg"
+                        alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4">
+                    <h2 class="text-center text-lg">Mens 004</h2>
+                </div>
             </div>
         </div>
     </div>
-   </div>
     <!-- profile end here -->
 
 
