--- a/sweater-women.html
+++ b/sweater-women.html
@@ -69,13 +69,13 @@
                             </button>
                             <a href="index.html" class="block py-2 px-3 text-white hover:bg-blue-700">Home</a>
                             <div class="dropdown">
-                                <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">About Us</a>
+                                <a href="index.html" class="block py-2 px-3 text-white hover:bg-blue-700">About Us</a>
                                 <div class="dropdown-menu">
-                                    <a href="#">Our Profile</a>
-                                    <a href="#">Our Goal</a>
-                                    <a href="#">How We Work</a>
-                                    <a href="#">Mission & Vision</a>
-                                    <a href="#">Zero Tolerance Policy</a>
+                                    <a href="profile.html">Our Profile</a>
+                                    <a href="goal.html">Our Goal</a>
+                                    <a href="how-we-work.html">How We Work</a>
+                                    <a href="mission-vision.html">Mission & Vision</a>
+                                    <a href="zero.html">Zero Tolerance Policy</a>
                                 </div>
                             </div>
                             <div class="dropdown">
@@ -84,7 +84,7 @@
                                     <div class="dropdown">
                                         <a href="#">Knit</a>
                                         <div class="submenu">
-                                            <a href="woven-men.html">Men</a>
+                                            <a href="knit-man.html">Men</a>
                                             <a href="knit-women.html">Women</a>
                                             <a href="knit-kids.html">Kids</a>
                                         </div>
@@ -126,20 +126,21 @@
                             </div>
                             <a href="faq.html" class="block py-2 px-3 text-white hover:bg-blue-700">FAQ</a>
                             <a href="services.html" class="block py-2 px-3 text-white hover:bg-blue-700">Services</a>
-                            <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">News & Events</a>
-                            <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">Contact Us</a>
+                            <a href="news-events.html" class="block py-2 px-3 text-white hover:bg-blue-700">News &
+                                Events</a>
+                            <a href="contact.html" class="block py-2 px-3 text-white hover:bg-blue-700">Contact Us</a>
                         </div>
                         <!-- Primary Navigation Menu -->
                         <div class="hidden md:flex items-center space-x-1">
                             <a href="index.html" class="text-white py-2 px-3 hover:bg-blue-700">Home</a>
                             <div class="dropdown relative">
-                                <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">About Us</a>
+                                <a href="index.html" class="text-white py-2 px-3 hover:bg-blue-700">About Us</a>
                                 <div class="dropdown-menu absolute hidden">
-                                    <a href="#">Our Profile</a>
-                                    <a href="#">Our Goal</a>
-                                    <a href="#">How We Work</a>
-                                    <a href="#">Mission & Vision</a>
-                                    <a href="#">Zero Tolerance Policy</a>
+                                    <a href="profile.html">Our Profile</a>
+                                    <a href="goal.html">Our Goal</a>
+                                    <a href="how-we-work.html">How We Work</a>
+                                    <a href="mission-vision.html">Mission & Vision</a>
+                                    <a href="zero.html">Zero Tolerance Policy</a>
                                 </div>
                             </div>
                             <div class="dropdown relative">
@@ -190,8 +191,8 @@
                             </div>
                             <a href="faq.html" class="text-white py-2 px-3 hover:bg-blue-700">FAQ</a>
                             <a href="services.html" class="text-white py-2 px-3 hover:bg-blue-700">Services</a>
-                            <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">News & Events</a>
-                            <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">Contact Us</a>
+                            <a href="news-events.html" class="text-white py-2 px-3 hover:bg-blue-700">News & Events</a>
+                            <a href="contact.html" class="text-white py-2 px-3 hover:bg-blue-700">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -204,10 +205,36 @@
     <!-- header end here -->
 
 
-            <!-- News and Events start here -->
-           
+    <!-- knit man start here -->
 
-            <!-- News and Events end here -->
+    <div class="bg-gray-100">
+        <div class="container mx-auto py-10">
+            <h1 class="text-center text-3xl font-semibold mb-8">Sweater Women All Products</h1>
+            <div class="flex justify-center gap-4">
+                <div class="w-1/4 p-4 bg-white shadow-lg">
+                    <img src="image/All Products/sweater/women.jpg"
+                        alt="Placeholder image of a grey t-shirt with a 'New Orleans Football' print" class="mb-4">
+                    <h2 class="text-center text-lg">Womens 001</h2>
+                </div>
+                <div class="w-1/4 p-4 bg-white shadow-lg">
+                    <img src="image/All Products/sweater/women2.jpg"
+                        alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4">
+                    <h2 class="text-center text-lg">Womens 002</h2>
+                </div>
+                <div class="w-1/4 p-4 bg-white shadow-lg">
+                    <img src="image/All Products/sweater/women3.jpg" alt="Placeholder image of a grey long sleeve shirt"
+                        class="mb-4">
+                    <h2 class="text-center text-lg">Womens 003</h2>
+                </div>
+                <div class="w-1/4 p-4 bg-white shadow-lg">
+                    <img src="image/All Products/sweater/women4.jpg"
+                        alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4">
+                    <h2 class="text-center text-lg">Womens 004</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- profile end here -->
 
 
 
