link all the pages

--- a/zero.html
+++ b/zero.html
@@ -100,9 +100,9 @@
                                     <div class="dropdown">
                                         <a href="#">Sweater</a>
                                         <div class="submenu">
-                                            <a href="#">Men</a>
-                                            <a href="#">Women</a>
-                                            <a href="#">Kids</a>
+                                            <a href="sweater-men.html">Men</a>
+                                            <a href="sweater-women.html">Women</a>
+                                            <a href="sweater-kids.html">Kids</a>
                                         </div>
                                     </div>
                                     <div class="dropdown">
@@ -117,9 +117,9 @@
                                     <div class="dropdown">
                                         <a href="#">Denim Top Bottom</a>
                                         <div class="submenu">
-                                            <a href="#">Men</a>
-                                            <a href="#">Women</a>
-                                            <a href="#">Kids</a>
+                                            <a href="denim-men.html">Men</a>
+                                            <a href="denim-women.html">Women</a>
+                                            <a href="denim-kids.html">Kids</a>
                                         </div>
                                     </div>
                                 </div>
@@ -165,9 +165,9 @@
                                     <div class="dropdown relative">
                                         <a href="#">Sweater</a>
                                         <div class="submenu absolute hidden">
-                                            <a href="#">Men</a>
-                                            <a href="#">Women</a>
-                                            <a href="#">Kids</a>
+                                            <a href="sweater-men.html">Men</a>
+                                            <a href="sweater-women.html">Women</a>
+                                            <a href="sweater-kids.html">Kids</a>
                                         </div>
                                     </div>
                                     <div class="dropdown relative">
@@ -182,9 +182,9 @@
                                     <div class="dropdown relative">
                                         <a href="#">Denim Top Bottom</a>
                                         <div class="submenu absolute hidden">
-                                            <a href="#">Men</a>
-                                            <a href="#">Women</a>
-                                            <a href="#">Kids</a>
+                                            <a href="denim-men.html">Men</a>
+                                            <a href="denim-women.html">Women</a>
+                                            <a href="denim-kids.html">Kids</a>
                                         </div>
                                     </div>
                                 </div>
