--- a/denim-men.html
+++ b/denim-men.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welldone Soucing</title>
-    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <!-- Link Swiper's CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
-
+    <!-- font awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     </link>
 </head>
@@ -22,11 +22,11 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
             <div class="header-content ">
                 <div class="header-logo">
-                    <a href="index.html"> <img class=" rounded-full ring ring-[#051744]" src="image/logo.jpg"></a>
-
+                    <a href="index.html"> <img class=" rounded-full ring ring-[#051744]" src="image/logo.jpg""></a>
+                  
                 </div>
                 <div class=" sourcing-text font-bold text-[#051744] text-lg">
-                    Export Oriented Buying & Sourcing House
+                        Export Oriented Buying & Sourcing House
                 </div>
                 <div class="social-icons ">
                     <a href="#" class="text-[#051744]">
@@ -52,7 +52,7 @@
 
         <!-- navbar start here -->
 
-        <nav class="bg-[#051744]">
+        <nav class="bg-[#051744] ">
             <div class="max-w-7xl mx-auto px-4 ">
                 <div class="flex justify-between h-16">
                     <div class="flex space-x-4">
@@ -100,9 +100,9 @@
                                     <div class="dropdown">
                                         <a href="#">Sweater</a>
                                         <div class="submenu">
-                                            <a href="sweater-men.html">Men</a>
-                                            <a href="sweater-women.html">Women</a>
-                                            <a href="sweater-kids.html">Kids</a>
+                                            <a href="#">Men</a>
+                                            <a href="#">Women</a>
+                                            <a href="#">Kids</a>
                                         </div>
                                     </div>
                                     <div class="dropdown">
@@ -126,7 +126,8 @@
                             </div>
                             <a href="faq.html" class="block py-2 px-3 text-white hover:bg-blue-700">FAQ</a>
                             <a href="services.html" class="block py-2 px-3 text-white hover:bg-blue-700">Services</a>
-                            <a href="news-events.html" class="block py-2 px-3 text-white hover:bg-blue-700">News & Events</a>
+                            <a href="news-events.html" class="block py-2 px-3 text-white hover:bg-blue-700">News &
+                                Events</a>
                             <a href="contact.html" class="block py-2 px-3 text-white hover:bg-blue-700">Contact Us</a>
                         </div>
                         <!-- Primary Navigation Menu -->
@@ -164,9 +165,9 @@
                                     <div class="dropdown relative">
                                         <a href="#">Sweater</a>
                                         <div class="submenu absolute hidden">
-                                            <a href="sweater-men.html">Men</a>
-                                            <a href="sweater-women.html">Women</a>
-                                            <a href="sweater-kids.html">Kids</a>
+                                            <a href="#">Men</a>
+                                            <a href="#">Women</a>
+                                            <a href="#">Kids</a>
                                         </div>
                                     </div>
                                     <div class="dropdown relative">
@@ -203,217 +204,42 @@
     </header>
     <!-- header end here -->
 
-    <!-- Carousel slider start here -->
-    <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide w-full h-[500px]">
-                <div class="w-full">
-                    <img class="object-cover object-center" src="image/slide-3.jpg" alt="">
+
+    <!-- knit man start here -->
+
+    <div class="bg-gray-100">
+        <div class="container mx-auto py-10">
+            <h1 class="text-center text-3xl font-semibold mb-8"> Mens All Products</h1>
+            <div class="flex justify-center gap-4">
+                <div class="w-1/4 p-4 bg-white shadow-lg">
+                    <img src="image/All Products/denim/men1.jpg"
+                        alt="Placeholder image of a grey t-shirt with a 'New Orleans Football' print" class="mb-4">
+                    <h2 class="text-center text-lg">Denim Tom-Bottom Men 01</h2>
+                </div>
+                <div class="w-1/4 p-4 bg-white shadow-lg">
+                    <img src="image/All Products/denim/men2.jpg"
+                        alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4">
+                    <h2 class="text-center text-lg">Denim Tom-Bottom Men 02</h2>
+                </div>
+                <div class="w-1/4 p-4 bg-white shadow-lg">
+                    <img src="image/All Products/denim/men3.jpg" alt="Placeholder image of a grey long sleeve shirt"
+                        class="mb-4">
+                    <h2 class="text-center text-lg">Denim Tom-Bottom Men 03</h2>
+                </div>
+                <div class="w-1/4 p-4 bg-white shadow-lg">
+                    <img src="image/All Products/denim/men4.jpg"
+                        alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4">
+                    <h2 class="text-center text-lg">Denim Tom-Bottom Men 04</h2>
                 </div>
             </div>
-            <div class="swiper-slide w-full h-[500px]">
-                <div class="w-full">
-                    <img class="object-cover object-center" src="image/slide-2.jpg" alt="">
-                </div>
-            </div>
-            <div class="swiper-slide w-full h-[500px]">
-                <div class="w-full">
-                    <img class="object-cover object-center" src="image/slide-1.jpg" alt="">
-                </div>
-            </div>
-        </div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-    </div>
-
-
-
-    <!-- Carousel slider end here -->
-
-    <!-- about section start here -->
-
-    <div class="bg-[#f7f4f4]">
-        <div class="max-w-7xl mx-auto px-4 py-8 bg-[#f7f4f4]">
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                <div>
-                    <img src="image/aboutus.jpg" alt="Fashion model posing in a black outfit, placeholder image"
-                        class="rounded shadow-lg">
-                </div>
-                <div>
-                    <h1 class="text-3xl font-bold mb-4">WELCOME TO </h2>
-                        <h3 class="text-3xl font-bold mb-4 carousel-text">Well Done Sourcing</h3>
-                        <p class="mb-4 text-justify">Well Done Sourcing Ltd is a globally-recognized fashion buying,
-                            sourcing, distributor, manufacturer & exporter company with an international scope. We are
-                            committed to excellence in the fashion industry. Our enthusiastic and entrepreneurial
-                            attitude to business has created strong relationships with buyers, manufacturers, &
-                            exporters. We have an established client base throughout Asia, Europe, America, Australia
-                            markets comprised of both independent and major retailers. Well Done Sourcing Ltd has built
-                            long-term relationships within all sectors of the fashion industry and has earned both
-                            respect and trust from the trade. Well Done Sourcing is a world class fashion show.Well Done
-                            Sourcing is a globally-recognized fashion buying, sourcing, distributor, manufacturer &
-                            exporter company with an international scope.</p>
-                        <a href="about.html"
-                            class="inline-block bg-[#051744] text-white font-semibold py-2 px-6 rounded hover:bg-blue-700 transition duration-300">CONTINUE
-                            READING</a>
-                </div>
-            </div>
-        </div>
-
-    </div>
-    <!-- about section end here -->
-
-    <!-- products section start here -->
-
-    <div class="py-8">
-        <div class="max-w-7xl mx-auto px-4">
-            <div class="text-center mb-10">
-                <h2 class="text-lg font-semibold uppercase tracking-wide text-[#bf9b7c]">Main Product Item</h2>
-                <h1 class="text-3xl font-bold text-gray-900 mt-2 carousel-text">Well Done Sourcing</h1>
-            </div>
-            <div class="grid grid-cols-6 gap-6 mb-16">
-                <!-- Product items -->
-                <div class="product-card bg-white shadow rounded overflow-hidden">
-                    <a href="#"> <img src="image/knit.jpg" alt="Knit clothing item placeholder image"
-                            class="w-full h-48 object-cover"></a>
-                    <div class="p-4">
-                        <h3 class="text-center text-gray-700">Knit</h3>
-                    </div>
-                </div>
-                <div class="product-card bg-white shadow rounded overflow-hidden">
-                    <a href="#"><img src="image/woven.jpg" alt="Woven clothing item placeholder image"
-                            class="w-full h-48 object-cover"></a>
-                    <div class="p-4">
-                        <h3 class="text-center text-gray-700">Woven</h3>
-                    </div>
-                </div>
-                <div class="product-card bg-white shadow rounded overflow-hidden">
-                    <a href="#"> <img src="image/sweater.jpg" alt="Sweater clothing item placeholder image"
-                            class="w-full h-48 object-cover"></a>
-                    <div class="p-4">
-                        <h3 class="text-center text-gray-700">Sweater</h3>
-                    </div>
-                </div>
-                <div class="product-card bg-white shadow rounded overflow-hidden">
-                    <a href="#"><img src="image/cap.jpg" alt="Heat wear cap item placeholder image"
-                            class="w-full h-48 object-cover"></a>
-                    <div class="p-4">
-                        <h3 class="text-center text-gray-700">Heat Wear (Cap)</h3>
-                    </div>
-                </div>
-                <div class="product-card bg-white shadow rounded overflow-hidden">
-                    <a href="#"><img src="image/others.jpg" alt="Other clothing items placeholder image"
-                            class="w-full h-48 object-cover"></a>
-                    <div class="p-4">
-                        <h3 class="text-center text-gray-700">Others</h3>
-                    </div>
-                </div>
-                <div class="product-card bg-white shadow rounded overflow-hidden">
-                    <a href="#"><img src="image/denim.jpg" alt="Denim top bottom clothing item placeholder image"
-                            class="w-full h-48 object-cover"></a>
-                    <div class="p-4">
-                        <h3 class="text-center text-gray-700">Denim Top Bottom</h3>
-                    </div>
-                </div>
-            </div>
-
-            <!-- products section end here -->
-
-
-            <!-- Our Best Experties start here -->
-            <div class="expertise-bg text-center py-10 ">
-                <h2 class="text-3xl font-bold text-white">Our Best Experties</h2>
-            </div>
-            <div class="flex justify-center space-x-4 bg-[#051744] py-10">
-                <div class="flex items-center space-x-2 bg-[#051744]">
-                    <div class="p-4 bg-blue-900 rounded-full">
-                        <i class="fa-2x fas fa-shipping-fast text-white"></i>
-                    </div>
-                    <div class="p-4 rounded-lg">
-                        <h3 class="text-lg font-semibold text-white">Timely Shipping</h3>
-                        <p class="text-white">We Are Timely Shipping to door</p>
-                    </div>
-                </div>
-                <div class="flex items-center space-x-2">
-                    <div class="p-4 bg-blue-900 rounded-full">
-                        <i class="fa-2x fas fa-smile text-white"></i>
-                    </div>
-                    <div class="p-4 rounded-lg">
-                        <h3 class="text-lg font-semibold text-white">Clients Satisfaction</h3>
-                        <p class="text-white">We ensure clients satisfaction</p>
-                    </div>
-                </div>
-                <div class="flex items-center space-x-2">
-                    <div class="p-4 bg-blue-900 rounded-full">
-                        <i class="fa-2x fas fa-lightbulb text-white"></i>
-                    </div>
-                    <div class="p-4 rounded-lg">
-                        <h3 class="text-lg font-semibold text-white">Creative Product</h3>
-                        <p class="text-white">We always make creative product.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Our Best Experties start here -->
-
-        <!-- All Product section start here -->
-
-
-        <div class="my-10">
-            <div class="max-w-7xl mx-auto px-4 bg-[#f7f4f4]">
-                <h2 class="text-lg font-semibold uppercase tracking-wide text-[#bf9b7c] text-center">OUR ALL Products
-                </h2>
-                <h2 class="text-2xl font-semibold text-gray-800 text-center mb-6">Well Done Sourcing Creation Products.
-                </h2>
-                <div class="grid grid-cols-1 md:grid-cols-4 gap-6 mb-12 ">
-                    <div class="product-card bg-white shadow-lg rounded-lg p-4 flex flex-col items-center text-center">
-                        <a href="#"><img src="image/men1.png" alt="Women's beige cardigan with red floral embroidery"
-                                class="mb-3"></a>
-                        <span class="text-gray-700 font-semibold">Men 004</span>
-                    </div>
-                    <div class="product-card bg-white shadow-lg rounded-lg p-4 flex flex-col items-center text-center">
-                        <a href="#"><img src="image/women.jpg" alt="Kids' navy blue jacket with patch" class="mb-3"></a>
-                        <span class="text-gray-700 font-semibold">women 001</span>
-                    </div>
-                    <div class="product-card bg-white shadow-lg rounded-lg p-4 flex flex-col items-center text-center">
-                        <a href="#"><img src="image/kids.jpg" alt="Kids' black sweater" class="mb-3"></a>
-                        <span class="text-gray-700 font-semibold">Kids 002</span>
-                    </div>
-                    <div class="product-card bg-white shadow-lg rounded-lg p-4 flex flex-col items-center text-center">
-                        <a href="#"><img src="image/men2.jpg" alt="Kids' grey and black striped sweater"
-                                class="mb-3"></a>
-                        <span class="text-gray-700 font-semibold">Kids 003</span>
-                    </div>
-                </div>
-                <div
-                    class="valued-client-section rounded-lg shadow-lg mb-12 p-6 flex items-center justify-center flex-col text-center">
-                    <div class="bg-opacity-75 p-4 rounded-lg">
-                        <h3 class="text-lg font-semibold text-white mb-2">Our Valued Client</h3>
-                        <p class="text-white">Thank you for being our valued customers. We are grateful for the pleasure
-                            of serving you and meeting your clothing needs.</p>
-                    </div>
-                </div>
-
-                <body class="bg-white">
-                    <div class="bg-white text-white p-8">
-                        <div class="flex flex-col md:flex-row justify-between items-center">
-                            <div class="text-3xl font-bold text-[#051744]">
-                                LATEST NEWS & UPDATES
-                            </div>
-                            <div class="flex space-x-4 mt-4 md:mt-0">
-                                <a href="#"><img src="image/latest-updatw.jpg"
-                                        alt="A variety of stylish clothing items neatly organized on hangers, showcasing a range of colors and designs."
-                                        class="w-48 h-32"></a>
-                                <a href="#"><img src="image/latest2.jpg"
-                                        alt="A close-up of a selection of shirts and jackets, highlighting the textures and fabrics."
-                                        class="w-48 h-32"></a>
-                            </div>
-                        </div>
-                    </div>
-            </div>
-
-            <!-- All Product section end here -->
         </div>
     </div>
+    <!-- profile end here -->
+
+
+
+
+
     <!-- footer start here -->
 
     <div class="bg-[#051744] text-white p-8 grid grid-cols-1 md:grid-cols-4 gap-4 ">
@@ -473,8 +299,6 @@
     <!-- footer end here -->
 
 
-    <!-- Swiper JS -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <!-- javascipt code  -->
     <script>
@@ -488,20 +312,31 @@
 
 
     </script>
-
     <script>
-        var swiper = new Swiper(".mySwiper", {
-            loop: true,
-            navigation: {
-                nextEl: ".swiper-button-next",
-                prevEl: ".swiper-button-prev",
-            },
-            autoplay: {
-                delay: 3000,
-            }
+        document.getElementById('menuButton').addEventListener('click', function () {
+            document.getElementById('menuDrawer').classList.add('active');
         });
-    </script>
 
+        document.getElementById('closeButton').addEventListener('click', function () {
+            document.getElementById('menuDrawer').classList.remove('active');
+        });
+        let slideIndex = 0;
+        showSlides();
+
+        function showSlides() {
+            let i;
+            let slides = document.getElementsByClassName("carousel-item");
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.opacity = "0";
+                slides[i].classList.remove("active");
+            }
+            slideIndex++;
+            if (slideIndex > slides.length) { slideIndex = 1 }
+            slides[slideIndex - 1].style.opacity = "1";
+            slides[slideIndex - 1].classList.add("active");
+            setTimeout(showSlides, 2000); // Change image every 3 seconds
+        }
+    </script>
 </body>
 
 </html>
