--- a/faq.html
+++ b/faq.html
@@ -117,9 +117,9 @@
                                     <div class="dropdown">
                                         <a href="#">Denim Top Bottom</a>
                                         <div class="submenu">
-                                            <a href="#">Men</a>
-                                            <a href="#">Women</a>
-                                            <a href="#">Kids</a>
+                                            <a href="denim-men.html">Men</a>
+                                            <a href="denim-women.html">Women</a>
+                                            <a href="denim-kids.html">Kids</a>
                                         </div>
                                     </div>
                                 </div>
@@ -181,9 +181,9 @@
                                     <div class="dropdown relative">
                                         <a href="#">Denim Top Bottom</a>
                                         <div class="submenu absolute hidden">
-                                            <a href="#">Men</a>
-                                            <a href="#">Women</a>
-                                            <a href="#">Kids</a>
+                                            <a href="denim-men.html">Men</a>
+                                            <a href="denim-women.html">Women</a>
+                                            <a href="denim-kids.html">Kids</a>
                                         </div>
                                     </div>
                                 </div>
