aded news and events page

--- a/knit-kids.html
+++ b/knit-kids.html
@@ -105,14 +105,15 @@
                                             <a href="sweater-kids.html">Kids</a>
                                         </div>
                                     </div>
-                                    <div class="dropdown">
+                                    <!-- <div class="dropdown">
                                         <a href="#">Headwear (Cap)</a>
                                         <div class="submenu">
                                             <a href="#">Men</a>
                                             <a href="#">Women</a>
                                             <a href="#">Kids</a>
                                         </div>
-                                    </div>
+                                    </div> -->
+                                    <a href="#">Headwear (Cap)</a>
                                     <a href="#">Others</a>
                                     <div class="dropdown">
                                         <a href="#">Denim Top Bottom</a>
@@ -170,14 +171,15 @@
                                             <a href="sweater-kids.html">Kids</a>
                                         </div>
                                     </div>
-                                    <div class="dropdown relative">
+                                    <!-- <div class="dropdown relative">
                                         <a href="#">Headwear (Cap)</a>
                                         <div class="submenu absolute hidden">
                                             <a href="#">Men</a>
                                             <a href="#">Women</a>
                                             <a href="#">Kids</a>
                                         </div>
-                                    </div>
+                                    </div> -->
+                                    <a href="#">Headwear (Cap)</a>
                                     <a href="#">Others</a>
                                     <div class="dropdown relative">
                                         <a href="#">Denim Top Bottom</a>
@@ -207,29 +209,33 @@
 
     <!-- knit man start here -->
 
-   <div class="bg-gray-100">
-    <div class="container mx-auto py-10">
-        <h1 class="text-center text-3xl font-semibold mb-8">knit Kids All Products</h1>
-        <div class="flex justify-center gap-4">
-            <div class="w-1/4 p-4 bg-white shadow-lg">
-                <img src="image/All Products/kids1.jpg" alt="Placeholder image of a grey t-shirt with a 'New Orleans Football' print" class="mb-4">
-                <h2 class="text-center text-lg">Kids 001</h2>
-            </div>
-            <div class="w-1/4 p-4 bg-white shadow-lg">
-                <img src="image/All Products/kids2.jpg" alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4">
-                <h2 class="text-center text-lg">Kids 002</h2>
-            </div>
-            <div class="w-1/4 p-4 bg-white shadow-lg">
-                <img src="image/All Products/kids3.jpg" alt="Placeholder image of a grey long sleeve shirt" class="mb-4">
-                <h2 class="text-center text-lg">Kids 003</h2>
-            </div>
-            <div class="w-1/4 p-4 bg-white shadow-lg">
-                <img src="image/All Products/kids4.jpg" alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4">
-                <h2 class="text-center text-lg">Kids 004</h2>
+    <div class="bg-gray-100">
+        <div class="container mx-auto py-10">
+            <h1 class="text-center text-3xl font-semibold mb-8">knit Kids All Products</h1>
+            <div class="flex justify-center gap-4">
+                <div class="w-1/4 p-4 bg-white shadow-lg">
+                    <img src="image/All Products/kids1.jpg"
+                        alt="Placeholder image of a grey t-shirt with a 'New Orleans Football' print" class="mb-4">
+                    <h2 class="text-center text-lg">Kids 001</h2>
+                </div>
+                <div class="w-1/4 p-4 bg-white shadow-lg">
+                    <img src="image/All Products/kids2.jpg"
+                        alt="Placeholder image of a green t-shirt with a 'Turn in Your Guns' print" class="mb-4">
+                    <h2 class="text-center text-lg">Kids 002</h2>
+                </div>
+                <div class="w-1/4 p-4 bg-white shadow-lg">
+                    <img src="image/All Products/kids3.jpg" alt="Placeholder image of a grey long sleeve shirt"
+                        class="mb-4">
+                    <h2 class="text-center text-lg">Kids 003</h2>
+                </div>
+                <div class="w-1/4 p-4 bg-white shadow-lg">
+                    <img src="image/All Products/kids4.jpg"
+                        alt="Placeholder image of a black t-shirt with a motorcycle print" class="mb-4">
+                    <h2 class="text-center text-lg">Kids 004</h2>
+                </div>
             </div>
         </div>
     </div>
-   </div>
     <!-- profile end here -->
 
 
