--- a/news-events.html
+++ b/news-events.html
@@ -69,13 +69,13 @@
                             </button>
                             <a href="index.html" class="block py-2 px-3 text-white hover:bg-blue-700">Home</a>
                             <div class="dropdown">
-                                <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">About Us</a>
+                                <a href="index.html" class="block py-2 px-3 text-white hover:bg-blue-700">About Us</a>
                                 <div class="dropdown-menu">
-                                    <a href="#">Our Profile</a>
-                                    <a href="#">Our Goal</a>
-                                    <a href="#">How We Work</a>
-                                    <a href="#">Mission & Vision</a>
-                                    <a href="#">Zero Tolerance Policy</a>
+                                    <a href="profile.html">Our Profile</a>
+                                    <a href="goal.html">Our Goal</a>
+                                    <a href="how-we-work.html">How We Work</a>
+                                    <a href="mission-vision.html">Mission & Vision</a>
+                                    <a href="zero.html">Zero Tolerance Policy</a>
                                 </div>
                             </div>
                             <div class="dropdown">
@@ -84,7 +84,7 @@
                                     <div class="dropdown">
                                         <a href="#">Knit</a>
                                         <div class="submenu">
-                                            <a href="woven-men.html">Men</a>
+                                            <a href="knit-man.html">Men</a>
                                             <a href="knit-women.html">Women</a>
                                             <a href="knit-kids.html">Kids</a>
                                         </div>
@@ -105,41 +105,43 @@
                                             <a href="sweater-kids.html">Kids</a>
                                         </div>
                                     </div>
-                                    <div class="dropdown">
+                                    <!-- <div class="dropdown">
                                         <a href="#">Headwear (Cap)</a>
                                         <div class="submenu">
                                             <a href="#">Men</a>
                                             <a href="#">Women</a>
                                             <a href="#">Kids</a>
                                         </div>
-                                    </div>
+                                    </div> -->
+                                    <a href="#">Headwear (Cap)</a>
                                     <a href="#">Others</a>
                                     <div class="dropdown">
                                         <a href="#">Denim Top Bottom</a>
                                         <div class="submenu">
-                                            <a href="#">Men</a>
-                                            <a href="#">Women</a>
-                                            <a href="#">Kids</a>
+                                            <a href="denim-men.html">Men</a>
+                                            <a href="denim-women.html">Women</a>
+                                            <a href="denim-kids.html">Kids</a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <a href="faq.html" class="block py-2 px-3 text-white hover:bg-blue-700">FAQ</a>
                             <a href="services.html" class="block py-2 px-3 text-white hover:bg-blue-700">Services</a>
-                            <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">News & Events</a>
-                            <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">Contact Us</a>
+                            <a href="news-events.html" class="block py-2 px-3 text-white hover:bg-blue-700">News &
+                                Events</a>
+                            <a href="contact.html" class="block py-2 px-3 text-white hover:bg-blue-700">Contact Us</a>
                         </div>
                         <!-- Primary Navigation Menu -->
                         <div class="hidden md:flex items-center space-x-1">
                             <a href="index.html" class="text-white py-2 px-3 hover:bg-blue-700">Home</a>
                             <div class="dropdown relative">
-                                <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">About Us</a>
+                                <a href="index.html" class="text-white py-2 px-3 hover:bg-blue-700">About Us</a>
                                 <div class="dropdown-menu absolute hidden">
-                                    <a href="#">Our Profile</a>
-                                    <a href="#">Our Goal</a>
-                                    <a href="#">How We Work</a>
-                                    <a href="#">Mission & Vision</a>
-                                    <a href="#">Zero Tolerance Policy</a>
+                                    <a href="profile.html">Our Profile</a>
+                                    <a href="goal.html">Our Goal</a>
+                                    <a href="how-we-work.html">How We Work</a>
+                                    <a href="mission-vision.html">Mission & Vision</a>
+                                    <a href="zero.html">Zero Tolerance Policy</a>
                                 </div>
                             </div>
                             <div class="dropdown relative">
@@ -169,29 +171,30 @@
                                             <a href="sweater-kids.html">Kids</a>
                                         </div>
                                     </div>
-                                    <div class="dropdown relative">
+                                    <!-- <div class="dropdown relative">
                                         <a href="#">Headwear (Cap)</a>
                                         <div class="submenu absolute hidden">
                                             <a href="#">Men</a>
                                             <a href="#">Women</a>
                                             <a href="#">Kids</a>
                                         </div>
-                                    </div>
+                                    </div> -->
+                                    <a href="#">Headwear (Cap)</a>
                                     <a href="#">Others</a>
                                     <div class="dropdown relative">
                                         <a href="#">Denim Top Bottom</a>
                                         <div class="submenu absolute hidden">
-                                            <a href="#">Men</a>
-                                            <a href="#">Women</a>
-                                            <a href="#">Kids</a>
+                                            <a href="denim-men.html">Men</a>
+                                            <a href="denim-women.html">Women</a>
+                                            <a href="denim-kids.html">Kids</a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <a href="faq.html" class="text-white py-2 px-3 hover:bg-blue-700">FAQ</a>
                             <a href="services.html" class="text-white py-2 px-3 hover:bg-blue-700">Services</a>
-                            <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">News & Events</a>
-                            <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">Contact Us</a>
+                            <a href="news-events.html" class="text-white py-2 px-3 hover:bg-blue-700">News & Events</a>
+                            <a href="contact.html" class="text-white py-2 px-3 hover:bg-blue-700">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -204,10 +207,72 @@
     <!-- header end here -->
 
 
-            <!-- News and Events start here -->
-           
+    <!-- knit man start here -->
 
-            <!-- News and Events end here -->
+    <div class="bg-gray-100">
+        <div class="container mx-auto px-4 md:px-0">
+            <div class="md:flex md:justify-between">
+                <!-- Main content -->
+                <div class="md:w-2/3 lg:w-3/4 xl:w-4/5">
+                    <!-- First blog post with large image -->
+                    <div class="mb-6">
+                        <img src="image/news-enents/3.jpg"
+                            alt="A variety of clothing items on display in a boutique store" class="w-full h-auto mb-4">
+                        <h2 class="text-2xl font-bold mb-2">Style Chronicles</h2>
+                        <p class="text-gray-700 mb-4">Discover the latest trends and timeless pieces in our fashion
+                            exploration. Dive into the world of style with our curated collections and expert advice.
+                            Read more</p>
+                    </div>
+                    <!-- Second blog post with medium image -->
+                    <div class="mb-6">
+                        <img src="image/news-enents/1.jpg" alt="Colorful fabrics arranged in an artistic fashion"
+                            class="w-full h-auto mb-4">
+                        <h2 class="text-xl font-semibold mb-2">Fabric Fantasies</h2>
+                        <p class="text-gray-700 mb-4">Unravel the secrets behind the most exquisite fabrics. From
+                            luxurious silks to organic cottons, learn what makes each material unique. Read more</p>
+                    </div>
+                    <!-- Third blog post with medium image -->
+                    <div class="mb-6">
+                        <img src="image/news-enents/2.jpg" alt="Two women selecting garments in a clothing store"
+                            class="w-full h-auto mb-4">
+                        <h2 class="text-xl font-semibold mb-2">Wardrobe Wonders</h2>
+                        <p class="text-gray-700 mb-4">Revamp your wardrobe with our expert styling tips. Find out how to
+                            mix and match pieces to create looks that express your personal style. Read more</p>
+                    </div>
+                </div>
+                <!-- Sidebar for latest posts -->
+                <div class="md:w-1/3 lg:w-1/4 xl:w-1/5 bg-white p-4 sticky top-0">
+                    <h3 class="font-semibold text-lg mb-4 border-b pb-2">Latest Posts</h3>
+                    <!-- Latest post entries -->
+                    <div class="flex items-center mb-4">
+                        <img src="image/news-enents/3.jpg" alt="Thumbnail image for Style Chronicles post"
+                            class="w-20 h-20 mr-4">
+                        <div>
+                            <h4 class="font-semibold mb-1">Style Chronicles</h4>
+                            <a href="#" class="text-blue-500 hover:text-blue-600">View Post</a>
+                        </div>
+                    </div>
+                    <div class="flex items-center mb-4">
+                        <img src="image/news-enents/1.jpg" alt="Thumbnail image for Fabric Fantasies post"
+                            class="w-20 h-20 mr-4">
+                        <div>
+                            <h4 class="font-semibold mb-1">Fabric Fantasies</h4>
+                            <a href="#" class="text-blue-500 hover:text-blue-600">View Post</a>
+                        </div>
+                    </div>
+                    <div class="flex items-center mb-4">
+                        <img src="image/news-enents/2.jpg" alt="Thumbnail image for Wardrobe Wonders post"
+                            class="w-20 h-20 mr-4">
+                        <div>
+                            <h4 class="font-semibold mb-1">Wardrobe Wonders</h4>
+                            <a href="#" class="text-blue-500 hover:text-blue-600">View Post</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- profile end here -->
 
 
 
