--- a/sweater-women.html
+++ b/sweater-women.html
@@ -105,14 +105,15 @@
                                             <a href="sweater-kids.html">Kids</a>
                                         </div>
                                     </div>
-                                    <div class="dropdown">
+                                    <!-- <div class="dropdown">
                                         <a href="#">Headwear (Cap)</a>
                                         <div class="submenu">
                                             <a href="#">Men</a>
                                             <a href="#">Women</a>
                                             <a href="#">Kids</a>
                                         </div>
-                                    </div>
+                                    </div> -->
+                                    <a href="">Headwear (Cap)
                                     <a href="#">Others</a>
                                     <div class="dropdown">
                                         <a href="#">Denim Top Bottom</a>
@@ -170,14 +171,15 @@
                                             <a href="sweater-kids.html">Kids</a>
                                         </div>
                                     </div>
-                                    <div class="dropdown relative">
+                                    <!-- <div class="dropdown relative">
                                         <a href="#">Headwear (Cap)</a>
                                         <div class="submenu absolute hidden">
                                             <a href="#">Men</a>
                                             <a href="#">Women</a>
                                             <a href="#">Kids</a>
                                         </div>
-                                    </div>
+                                    </div> -->
+                                    <a href="">Headwear (Cap)
                                     <a href="#">Others</a>
                                     <div class="dropdown relative">
                                         <a href="#">Denim Top Bottom</a>
