updated contact page

--- a/contact.html
+++ b/contact.html
@@ -211,16 +211,18 @@
 
     <section class="bg-gray-100">
         <div class="container mx-auto px-6 py-10">
-            <h1 class="text-3xl font-semibold text-gray-800 mb-8 text-center">Contact Us</h1>
+            <h1 class="text-3xl font-semibold text-gray-800 mb-8 ">Contact Us</h1>
+            <hr class="pb-2">
 
-            <div class="flex flex-wrap justify-between ">
-                <div class="bg-white p-12 shadow-lg rounded-lg max-w-sm ">
+            <div class="flex flex-wrap justify-center space-y-8 space-x-20 ">
+                <div class="bg-white p-12 shadow-lg rounded-lg max-w-sm  ">
                     <h2 class="text-xl font-semibold text-gray-800 mb-4">Office Address</h2>
                     <p class="text-gray-600 mb-4">
                         <i class="fas fa-map-marker-alt text-red-500 mr-2"></i>
-                        Azure Textiles Limited<br>
-                        House # 12, Road # 34,<br>
-                        Sector # 07, Crystal City,<br>
+                        Well Done Sourcing<br>
+                        House 465 (2nd floor), Road 08,,<br>
+                        DOHS Baridhara,
+                        Cantonment,<br>
                         Dhaka - 1230, Bangladesh
                     </p>
                     <p class="text-gray-600 mb-4">
@@ -233,8 +235,8 @@
                         +880 9876 543 210
                     </p>
                 </div>
-                <div class="max-w-sm">
-                    <img class="rounded-lg shadow-lg " src="image/contact.png"
+                <div class="max-w-xl">
+                    <img class="rounded-lg shadow-lg  " src="image/contact.png"
                         alt="Customer service representative with a headset smiling and assisting clients.">
                 </div>
             </div>
