--- a/denim-kids.html
+++ b/denim-kids.html
@@ -113,8 +113,8 @@
                                             <a href="#">Kids</a>
                                         </div>
                                     </div> -->
-                                    <a href="#">Headwear (Cap)</a>
-                                    <a href="#">Others</a>
+                                    <a href="cap.html">Headwear (Cap)</a>
+                                    <a href="others.html">Others</a>
                                     <div class="dropdown">
                                         <a href="#">Denim Top Bottom</a>
                                         <div class="submenu">
@@ -166,9 +166,9 @@
                                     <div class="dropdown relative">
                                         <a href="#">Sweater</a>
                                         <div class="submenu absolute hidden">
-                                            <a href="#">Men</a>
-                                            <a href="#">Women</a>
-                                            <a href="#">Kids</a>
+                                            <a href="sweater-men.html">Men</a>
+                                            <a href="sweater-women.html">Women</a>
+                                            <a href="sweater-kids.html">Kids</a>
                                         </div>
                                     </div>
                                     <!-- <div class="dropdown relative">
@@ -179,8 +179,8 @@
                                             <a href="#">Kids</a>
                                         </div>
                                     </div> -->
-                                    <a href="#">Headwear (Cap)</a>
-                                    <a href="#">Others</a>
+                                    <a href="cap.html">Headwear (Cap)</a>
+                                    <a href="others.html">Others</a>
                                     <div class="dropdown relative">
                                         <a href="#">Denim Top Bottom</a>
                                         <div class="submenu absolute hidden">
