--- a/goal.html
+++ b/goal.html
@@ -113,8 +113,8 @@
                                             <a href="#">Kids</a>
                                         </div>
                                     </div> -->
-                                    <a href="#">Headwear (Cap)</a>
-                                    <a href="#">Others</a>
+                                    <a href="cap.html">Headwear (Cap)</a>
+                                    <a href="others.html">Others</a>
                                     <div class="dropdown">
                                         <a href="#">Denim Top Bottom</a>
                                         <div class="submenu">
@@ -179,8 +179,8 @@
                                             <a href="#">Kids</a>
                                         </div>
                                     </div> -->
-                                    <a href="#">Headwear (Cap)</a>
-                                    <a href="#">Others</a>
+                                    <a href="cap.html">Headwear (Cap)</a>
+                                    <a href="others.html">Others</a>
                                     <div class="dropdown relative">
                                         <a href="#">Denim Top Bottom</a>
                                         <div class="submenu absolute hidden">
